src/drive/styles/toolbar.styl
@require 'components/button.styl'
@require 'settings/breakpoints.styl'
@require 'settings/z-index.styl'
@require 'utilities/display.styl'
@require 'settings/palette.styl'

.c-btn
    @extend $button

.c-btn--regular
    @extend $button--regular

.c-btn--secondary
    @extend $button--secondary

.c-btn--danger
    @extend $button--danger

.c-btn--danger-outline
    @extend $button--danger-outline


.toolbar-inside-bar
  display flex
  justify-content flex-end
  align-items center

.fil-toolbar-files
.fil-toolbar-trash
    margin-left auto
    display     flex

.fil-toolbar-menu
    //!TODO Remove this code after upgrading to cozy-bar@6
    button
        svg
            visibility: initial
            display: initial
    a
    label
        &.fil-action-upload
            span[role=button]
                display flex
                padding-left 1rem
            svg
                margin-right .5rem

        &.fil-action-newfolder
            background embedurl('../assets/icons/icon-folder-add-16.svg') 1rem center no-repeat
        &.fil-action-download
            background embedurl("../assets/icons/icon-download-16.svg") 1rem center no-repeat
        &.fil-action-select
            background embedurl('../assets/icons/icon-checkbox-16.svg') 1rem center no-repeat
        &.fil-action-delete
            color var(--pomegranate)
            background embedurl('../assets/icons/icon-trash-red.svg') 1rem center no-repeat
        &.fil-action-share
            background embedurl('../assets/icons/icon-share-dark.svg') 1rem center no-repeat
        &.fil-action-create-note
            background embedurl('../assets/icons/icons-16-icon-note.svg') 1rem center no-repeat
        &.fil-action-create-shortcut
            background embedurl('../assets/icons/icon-link.svg') 1rem center no-repeat

            .fil-toolbar-menu-recipients
                position absolute
                right    1rem
                top      .1rem

    .fil-action-share
        display none

+medium-screen()
    .fil-toolbar-menu
        display block
        left 1em
        .fil-action-share
        .fil-action-select
        .fil-action-upload
            display block

+small-screen()
    .fil-toolbar-inner-menu
        position fixed
        margin   .5rem
        width    calc(100% - 1rem)
    .fil-toolbar-files
    .fil-toolbar-trash
        position fixed
        top      0
        right    0
        z-index  $nav-index

    .fil-public-download
        display none

+small-screen('min')
    .fil-toolbar-menu--public
        display none

